# invenio-server

./: README.md
inv/: bootstrap.sh  pyproject.toml  run.sh  server.crt  server.key
inv/testinvenio/: cli.py  config.py  ext.py  records.py
inv/testinvenio/mappings/v7/testinvenio/: record.json
